[package]
name = "impact_containers"
description = "Container data structures for the Impact engine"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
roc_codegen = ["dep:inventory", "roc_integration/roc_codegen"]

[dependencies]
anyhow = { workspace = true }
atomic_enum = "0.3"
bytemuck = { workspace = true }
inventory = { workspace = true, optional = true }
nohash-hasher = { workspace = true }
roc_integration = { path = "../../roc_integration" }
rustc-hash = "2.1"

[lints]
workspace = true
