[package]
name = "impact_dev_ui"
description = "Developer UI for the Impact engine"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
arbitrary = ["dep:arbitrary"]
roc_codegen = ["dep:inventory", "roc_integration/roc_codegen"]

[dependencies]
anyhow = { workspace = true }
arbitrary = { workspace = true, optional = true }
egui_extras = "0.31"
inventory = { workspace = true, optional = true }
impact = { path = "..", features = ["window"] }
serde = { workspace = true }

impact_math = { path = "../impact_math" }
roc_integration = { path = "../../roc_integration" }

[lints]
workspace = true
