[package]
name = "impact_ecs"
version = { workspace = true }
edition = { workspace = true }

[features]
arbitrary = ["dep:arbitrary"]
roc_codegen = ["roc_integration/roc_codegen"]

[dependencies]
anyhow = { workspace = true }
arbitrary = { version = "1.3", features = ["derive"], optional = true }
bytemuck = { workspace = true }
const-fnv1a-hash = { workspace = true }
inventory = { workspace = true }
paste = { workspace = true }

impact_containers = { path = "../impact_containers" }
impact_ecs_macros = { path = "impact_ecs_macros" }
roc_integration = { path = "../../roc_integration" }

[lints]
workspace = true
