[package]
name = "impact_geometry"
version = { workspace = true }
edition = { workspace = true }

[features]
roc_codegen = ["dep:inventory", "roc_integration/roc_codegen"]
serde = ["dep:serde"]

[dependencies]
anyhow = { workspace = true }
approx = "0.5"
bytemuck = { workspace = true }
inventory = { workspace = true, optional = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }

impact_math = { path = "../impact_math" }
roc_integration = { path = "../../roc_integration" }

[lints]
workspace = true
