[package]
name = "impact_geometry"
description = "Geometric primitives for the Impact engine"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
roc_codegen = ["dep:inventory", "roc_integration/roc_codegen"]

[dependencies]
anyhow = { workspace = true }
approx = "0.5"
bytemuck = { workspace = true }
inventory = { workspace = true, optional = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }

impact_math = { path = "../impact_math" }
roc_integration = { path = "../../roc_integration" }

[lints]
workspace = true
