[package]
name = "impact_gpu"
description = "GPU primitives for the Impact engine"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
arbitrary = ["dep:arbitrary"]
roc_codegen = [
    "dep:inventory",
    "impact_containers/roc_codegen",
    "impact_math/roc_codegen",
    "roc_integration/roc_codegen",
]
serde = ["dep:serde"]

[dependencies]
anyhow = { workspace = true }
arbitrary = { workspace = true, optional = true }
bytemuck = { workspace = true }
half = { version = "2.6", features = ["bytemuck"] }
image = { version = "0.25", default-features = false, features = [
    "png",
    "jpeg",
] }
impact_containers = { path = "../impact_containers" }
impact_math = { path = "../impact_math" }
inventory = { workspace = true, optional = true }
naga = { version = "24.0", features = ["wgsl-out"] }
ordered-float = "5.0"
regex = "1.11"
roc_integration = { path = "../../roc_integration" }
serde = { workspace = true, optional = true }
wgpu = { version = "24.0", features = ["naga-ir", "serde"] }

[lints]
workspace = true
