[package]
name = "impact_material"
description = "Materials for the Impact engine"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
roc_codegen = [
    "impact_containers/roc_codegen",
    "impact_ecs/roc_codegen",
    "impact_geometry/roc_codegen",
    "impact_gpu/roc_codegen",
    "impact_math/roc_codegen",
    "impact_mesh/roc_codegen",
    "impact_model/roc_codegen",
    "roc_integration/roc_codegen",
]

[dependencies]
anyhow = { workspace = true }
approx = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
impact_containers = { path = "../impact_containers" }
impact_ecs = { path = "../impact_ecs" }
impact_geometry = { path = "../impact_geometry" }
impact_gpu = { path = "../impact_gpu" }
impact_math = { path = "../impact_math" }
impact_mesh = { path = "../impact_mesh" }
impact_model = { path = "../impact_model" }
inventory = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
roc_integration = { path = "../../roc_integration" }

[lints]
workspace = true
