[package]
name = "impact_math"
version = { workspace = true }
edition = { workspace = true }

[features]
arbitrary = ["dep:arbitrary"]
roc_codegen = ["dep:inventory", "roc_integration/roc_codegen"]
serde = ["dep:serde"]

[dependencies]
anyhow = { workspace = true }
approx = "0.5"
arbitrary = { version = "1.3", features = ["derive"], optional = true }
bytemuck = { workspace = true }
const-fnv1a-hash = { workspace = true }
inventory = { workspace = true, optional = true }
lazy_static = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }

roc_integration = { path = "../../roc_integration" }

[lints]
workspace = true
