[package]
name = "impact_math"
description = "Mathematical utilities for the Impact engine"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
arbitrary = ["dep:arbitrary"]
roc_codegen = [
    "dep:inventory",
    "impact_containers/roc_codegen",
    "roc_integration/roc_codegen",
]
serde = ["dep:serde"]

[dependencies]
anyhow = { workspace = true }
approx = "0.5"
arbitrary = { version = "1.4", features = ["derive"], optional = true }
bytemuck = { workspace = true }
const-fnv1a-hash = { workspace = true }
inventory = { workspace = true, optional = true }

nalgebra = { workspace = true }
nohash-hasher = { workspace = true }
num-traits = { workspace = true }
serde = { version = "1.0", features = ["derive"], optional = true }

impact_containers = { path = "../impact_containers" }
roc_integration = { path = "../../roc_integration" }

[lints]
workspace = true
