[package]
name = "impact_mesh"
description = "Meshes for the Impact engine"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
obj = ["dep:tobj"]
ply = ["dep:ply-rs"]
roc_codegen = [
    "impact_containers/roc_codegen",
    "impact_ecs/roc_codegen",
    "impact_geometry/roc_codegen",
    "impact_gpu/roc_codegen",
    "impact_math/roc_codegen",
    "roc_integration/roc_codegen",
]
serde = ["dep:serde"]

[dependencies]
anyhow = { workspace = true }
approx = { workspace = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
impact_containers = { path = "../impact_containers" }
impact_ecs = { path = "../impact_ecs" }
impact_geometry = { path = "../impact_geometry" }
impact_gpu = { path = "../impact_gpu" }
impact_log = { path = "../impact_log" }
impact_math = { path = "../impact_math" }
inventory = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
ply-rs = { version = "0.1", optional = true }
roc_integration = { path = "../../roc_integration" }
serde = { workspace = true, optional = true }
tobj = { version = "4.0", optional = true }

[lints]
workspace = true
