[package]
name = "impact_scene"
description = "Scene management for the Impact engine"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[features]
arbitrary = [
    "dep:arbitrary",
    "impact_ecs/arbitrary",
    "impact_gpu/arbitrary",
    "impact_math/arbitrary",
]
ecs = [
    "dep:impact_ecs",
    "impact_camera/ecs",
    "impact_light/ecs",
    "impact_material/ecs",
    "impact_mesh/ecs",
]
roc_codegen = [
    "impact_camera/roc_codegen",
    "impact_containers/roc_codegen",
    "impact_ecs/roc_codegen",
    "impact_geometry/roc_codegen",
    "impact_gpu/roc_codegen",
    "impact_light/roc_codegen",
    "impact_material/roc_codegen",
    "impact_mesh/roc_codegen",
    "impact_mesh/roc_codegen",
    "impact_model/roc_codegen",
    "roc_integration/roc_codegen",
]

[dependencies]
anyhow = { workspace = true }
approx = { workspace = true }
arbitrary = { workspace = true, optional = true }
bitflags = { workspace = true }
bytemuck = { workspace = true }
impact_camera = { path = "../impact_camera" }
impact_containers = { path = "../impact_containers" }
impact_ecs = { path = "../impact_ecs", optional = true }
impact_geometry = { path = "../impact_geometry" }
impact_gpu = { path = "../impact_gpu" }
impact_light = { path = "../impact_light" }
impact_material = { path = "../impact_material" }
impact_math = { path = "../impact_math" }
impact_mesh = { path = "../impact_mesh" }
impact_model = { path = "../impact_model" }
inventory = { workspace = true }
nalgebra = { workspace = true }
num-traits = { workspace = true }
paste = { workspace = true }
roc_integration = { path = "../../roc_integration" }

[lints]
workspace = true
