[package]
name = "impact_utils"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bytemuck = { workspace = true }
const-fnv1a-hash = { workspace = true }
lazy_static = { workspace = true }
num-traits = { workspace = true }

[lints]
workspace = true
