[package]
name = "roc_codegen_macros"
version = "0.1.0"
edition = { workspace = true }

[lib]
proc-macro = true

[features]
enabled = []

[dependencies]
lazy_static = "1.4"
proc-macro2 = "1.0"
proc-macro-crate = "3.2"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[lints]
workspace = true
