[package]
name = "roc_integration_macros"
description = "Procedural macros for Roc integration with the Impact engine"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }

[lib]
proc-macro = true

[features]
roc_codegen = []

[dependencies]
lazy_static = "1.5"
proc-macro2 = "1.0"
proc-macro-crate = "3.2"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lints]
workspace = true
