[package]
name = "asset_fetcher"
description = "Retrieval of assets for use in the Impact engine"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "asset_fetcher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
impact_containers = { path = "../../engine/crates/impact_containers" }
impact_io = { path = "../../engine/crates/impact_io", features = ["ron"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20"
ureq = "3.0"
zip = "0.6"
