[package]
name = "asset_fetcher"
description = "Retrieval of assets for use in the Impact engine"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "asset_fetcher"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
impact_containers = { path = "../../engine/crates/impact_containers" }
impact_io = { path = "../../engine/crates/impact_io", features = ["ron"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
ureq = { version = "3.0", default-features = false, features = ["native-tls"] }
zip = "0.6"
