[package]
name = "basic_app_cli"
version = "0.1.0"
edition = "2024"

[features]
fuzzing = []

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
ffi_utils = { path = "../../../ffi_utils" }
libloading = "0.8"
log = "0.4"
paste = "1.0"

[[bin]]
name = "basic_app_cli"
path = "src/main.rs"
